# mseg

./: .gitignore  justfile  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst
examples/: base_clasp.py  base_pyearth.py  base_ruptures.py  base_stumpy.py  do_foo.py
notebooks/: tool_trials.ipynb
src/mseg/: __init__.py  pyearth.py  ruptures.py
tests/: test_foo.py
